# Prime-3

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README-dev.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/context/: product-context.md  progress.md  project-brief.md  project-overview.md  project-structure.md  project-style-guide.md  project-vision.md  system-patterns.md  tech-context.md
.claude/epics/prime-math-api/: 001.md  002.md  003.md  004.md  005.md  2.md  3.md  4.md  5.md  6.md  epic.md
.claude/prds/: prime-math-api.md
.github/workflows/: ci.yml
app/: main.py
docs/: README.md  api-usage.md  api-versioning.md  deployment.md  monitoring.md  production-checklist.md  rate-limiting.md
prime/: __init__.py  nt.py
tests/: test_main.py
